# SortViz

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  test.sh
.devcontainer/: devcontainer.json  docker-compose.yml
sortviz/: __init__.py  sorters.py  utils.py
sortviz/notebooks/: sorters.ipynb
tests/: conftest.py
tests/sortviz/: test_sorters.py  test_utils.py
